--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <header>
-     <h1>Rocket<span>Coffee</span></h1>
+     <h1>Eliza<span>Bakery</span></h1>
       <p>Aberto todos os dias. 8-21h</p>
     </header>
 
